force-app/main/default/objects/sf_devops__Source_Member_Reference__c/sf_devops__Source_Member_Reference__c.object-meta.xml
<CustomObject>
    <description>A reference in the DevOps Center to a SourceMember that exists on the remote development environment.</description>
    <label>Source Member Reference</label>
    <nameField>
        <displayFormat>SMR-{000000}</displayFormat>
        <label>Source Member Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Member References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>