force-app/main/default/objects/sf_devops__Source_Member_Reference__c/fields/sf_devops__Is_Delete__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Is_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this source member represents a delete.</description>
    <label>Is Delete</label>
    <type>Checkbox</type>
</CustomField>