force-app/main/default/objects/sf_devops__Source_Member_Reference__c/fields/sf_devops__Remote_Change__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Change__c</fullName>
    <description>A reference to the RemoteChange we are associated with.</description>
    <label>Remote Change</label>
    <referenceTo>sf_devops__Remote_Change__c</referenceTo>
    <relationshipName>Source_Member_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>